# estudos_Analista

./: .gitignore  README.md  pyproject.toml
python/Django/: pyproject.toml
python/Django/djangotutorial/mysite/: asgi.py  settings.py  urls.py  wsgi.py
python/Django/djangotutorial/polls/: models.py  views.py
python/Django/mysite/mysite/: settings.py  urls.py
python/Django/mysite/polls/: models.py  urls.py
python/Django/mysite/pratica/: apps.py  urls.py  views.py
python/books/: modelagem.md  problema.md  pyproject.toml
python/books/accounts/: models.py  urls.py
python/books/accounts/migrations/: 0001_initial.py
python/books/autores/: apps.py  models.py  urls.py  views.py
python/books/autores/migrations/: 0001_initial.py
python/books/books/: asgi.py  settings.py  urls.py  wsgi.py
python/books/categorias/: apps.py  models.py
python/books/categorias/migrations/: 0001_initial.py  0002_alter_categoria_options.py
python/books/emprestimos/: apps.py  models.py
python/books/emprestimos/migrations/: 0001_initial.py
python/books/livros/: models.py
python/books/livros/migrations/: 0001_initial.py  0002_alter_livro_options.py
python/books/membros/: apps.py  models.py
python/books/membros/migrations/: 0001_initial.py
python/desenvolvimento_web/: pyproject.toml
python/desenvolvimento_web/saac/: levantamento_requisitos.md
python/desenvolvimento_web/saac/saac/: asgi.py  wsgi.py
python/desenvolvimento_web/semana_02_arquitetura/: README.md
python/desenvolvimento_web/semana_03_ambiente_virtual/: README.md
python/desenvolvimento_web/semana_04_python_basio/: README.md  script.py
python/desenvolvimento_web/semana_04_python_basio/exercicios/: exe01.py  exe010.py  exe02.py  exe03.py  exe04.py  exe05.py  exe06.py  exe07.py  exe08.py  exe09.py
python/desenvolvimento_web/semana_05_automacao/: relatorio.py
python/desenvolvimento_web/semana_06_POO/: README.md  analise_credito.py
python/desenvolvimento_web/semana_07/: dados_fake.py
(+107 files in other folders)
