[project]
name = "estudos-analista"
version = "0.1.0"
description = ""
authors = [
    {name = "Deyved Antonio",email = "deyved.antonio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"
brutils = "^2.3.0"
faker = "^40.4.0"
mkdocs = "^1.6.1"
pytest = "^9.0.2"

