[project]
name = "desenvolvimento-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Deyved Antonio",email = "deyved.antonio@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)"
]
